--- a/hangarinsite/templates/account/login.html
+++ b/hangarinsite/templates/account/login.html
@@ -233,9 +233,9 @@
           <a href="{% provider_login_url 'google' %}" class="btn btn-link btn-floating mx-2">
             <i class="fab fa-google text-danger"></i>
           </a>
-          <a href="#" class="btn btn-link btn-floating mx-2">
+            <a href="{% provider_login_url 'github' %}" class="btn btn-link btn-floating mx-2">
             <i class="fab fa-github text-dark"></i>
-          </a>
+        </a>
         </div>
         <p class="text-center text-muted">or sign in with email</p>
         <div class="form-outline mb-4">
@@ -270,9 +270,9 @@
           <a href="{% provider_login_url 'google' %}" class="btn btn-link btn-floating mx-2">
             <i class="fab fa-google text-danger"></i>
           </a>
-          <a href="#" class="btn btn-link btn-floating mx-2">
-            <i class="fab fa-github text-dark"></i>
-          </a>
+          <a href="{% provider_login_url 'github' %}" class="btn btn-link btn-floating mx-2">
+          <i class="fab fa-github text-dark"></i>
+           </a>
         </div>
         <p class="text-center text-muted">or use your email to register</p>
         <div class="form-outline mb-4">
