--- a/hangarinsite/templates/account/signup.html
+++ b/hangarinsite/templates/account/signup.html
@@ -199,8 +199,8 @@
                     <a href="{% provider_login_url 'google' %}" class="btn btn-link btn-floating btn-google">
                         <i class="fab fa-google text-danger"></i>
                     </a>
-                    <a href="#" class="btn btn-link btn-floating btn-github">
-                        <i class="fab fa-github text-dark"></i>
+                    <a href="{% provider_login_url 'github' %}" class="btn btn-link btn-floating mx-2">
+                    <i class="fab fa-github text-dark"></i>
                     </a>
                 </div>
             </div>
