--- a/hangarinsite/templates/base.html
+++ b/hangarinsite/templates/base.html
@@ -1,7 +1,9 @@
 {% load static %}
+{% load pwa %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  {% progressive_web_app_meta %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Hangarin Dashboard{% endblock %}</title>
