--- a/hangarinsite/templates/socialaccount/login.html
+++ b/hangarinsite/templates/socialaccount/login.html
@@ -136,7 +136,10 @@
   <div class="auth-card">
     <h3>Confirm Sign In</h3>
     <p>You are about to sign in using your <strong>{{ provider.name }}</strong> account.</p>
-    <form method="post"> {% csrf_token %} <button type="submit" class="btn btn-primary btn-block mb-3"> {% if provider.id == 'google' %} <i class="fab fa-google provider-icon google-icon"></i> {% elif provider.id == 'github' %} <i class="fab fa-github provider-icon github-icon"></i> {% endif %} Continue with {{ provider.name }} </button> </form> <a href="{% url 'account_login' %}" class="btn btn-outline-secondary btn-block">Cancel</a>
+    <form method="post"> {% csrf_token %} <button type="submit" class="btn btn-primary btn-block mb-3"> {% if provider.id == 'google' %} 
+        <i class="fab fa-google provider-icon google-icon"></i> {% elif provider.id == 'github' %} 
+        <i class="fab fa-github provider-icon github-icon"></i> {% endif %} Continue with {{ provider.name }} </button> 
+    </form> <a href="{% url 'account_login' %}" class="btn btn-outline-secondary btn-block">Cancel</a>
   </div>
 </body>
 
